crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_strict.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t (a integer, b text) strict

-- Output:
create table t(
  a integer,
  b text
) STRICT;
