crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_strict_without_rowid.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t (a text primary key, b integer not null) strict, without rowid

-- Output:
create table t(
  a text primary key,
  b integer not null
) STRICT without ROWID;
