crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_with_column_doc_only.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t(
--   --- Unique identifier
--   id integer primary key,
--   name text,
--   --- Contact email address
--   email text
-- )

-- Output:
create table t(
  --- Unique identifier
  id integer primary key,
  name text,

  --- Contact email address
  email text
);
