crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_with_constraints.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t (id integer primary key, name text not null, email text unique)

-- Output:
create table t(
  id integer primary key,
  name text not null,
  email text unique
);
