crates/solite-fmt/src/snapshots/solite_fmt__tests__create_table_with_default.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t (id integer primary key, count integer default 0, status text default 'pending')

-- Output:
create table t(
  id integer primary key,
  count integer default 0,
  status text default 'pending'
);
